--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Figma Variable Import / Export</title>
+        <title>Figma Variables Import / Export</title>
     </head>
     <body>
         <div id="app"></div>
